@@ -232,7 +232,7 @@ public abstract class AbstractRequestService {
 	 * @param classes the classes
 	 */
 	public static void addRequestWrapperToIgnore(Class<?>... classes) {
-		PARAM_TYPES_TO_IGNORE.addAll(Arrays.asList(classes));
+		PARAM_TYPES_TO_IGNORE.addAll(List.of(classes));
 	}
 
 	/**
@@ -241,9 +241,7 @@ public abstract class AbstractRequestService {
 	 * @param classes the classes
 	 */
 	public static void removeRequestWrapperToIgnore(Class<?>... classes) {
-		List<Class<?>> classesToIgnore = Arrays.asList(classes);
-		if (PARAM_TYPES_TO_IGNORE.containsAll(classesToIgnore))
-			PARAM_TYPES_TO_IGNORE.removeAll(Arrays.asList(classes));
+		PARAM_TYPES_TO_IGNORE.removeAll(List.of(classes));
 	}
 
 	/**
@@ -597,7 +595,7 @@ public abstract class AbstractRequestService {
 	 * @return the boolean
 	 */
 	public boolean isValidParameter(Parameter parameter, MethodAttributes methodAttributes) {
-		return parameter != null && (parameter.getName() != null || parameter.get$ref() != null) && !(Arrays.asList(methodAttributes.getMethodConsumes()).contains(APPLICATION_FORM_URLENCODED_VALUE) && ParameterIn.QUERY.toString().equals(parameter.getIn()));
+		return parameter != null && (parameter.getName() != null || parameter.get$ref() != null) && !(List.of(methodAttributes.getMethodConsumes()).contains(APPLICATION_FORM_URLENCODED_VALUE) && ParameterIn.QUERY.toString().equals(parameter.getIn()));
 	}
 
 	/**
@@ -818,7 +816,7 @@ public abstract class AbstractRequestService {
 				(checkRequestBodyAnnotation(methodParameter)
 						|| checkOperationRequestBody(methodParameter)
 						|| checkFile(methodParameter)
-						|| Arrays.asList(methodAttributes.getMethodConsumes()).contains(MULTIPART_FORM_DATA_VALUE));
+						|| List.of(methodAttributes.getMethodConsumes()).contains(MULTIPART_FORM_DATA_VALUE));
 	}
 
 	/**
